Fri Apr 30 17:34:11 1993  Ken Raeburn  (raeburn@cambridge.cygnus.com)

	* elf32-hppa.c: Don't include a.out.h.  Apparently not even the
	GNU version is needed.

Fri Apr 30 09:38:59 1993  Jim Kingdon  (kingdon@cygnus.com)

	* coffcode.h: use dummy_reloc16_extra_cases rather than casting abort.

Thu Apr 29 11:30:32 1993  Ken Raeburn  (raeburn@deneb.cygnus.com)

	* Makefile.in: Build elf32-hppa.o.

	* syms.c (BSF_FUNCTION): New symbol flag.

	* elf32-hppa.c: Fixed to work with elf32-target.h.

	* hp300hpux.c (NAME, NAME_swap_exec_header_in): Fix for
	traditional C.
	* libaout.h (NAME): Don't define if already defined.

	* libelf.h: Protect against multiple inclusions.
	(elf_symbol_type): Moved here, added new fields.
	(struct elf_backend_data): New field `global_sym'; I suspect this
	may be misplaced.
	* elf32.c (elf_symbol_type): Deleted from here.
	(struct elf_obj_tdata): New fields raw_syms and internal_syms, to
	point to backend versions of symbols.
	(obj_symbols, obj_raw_syms, obj_internal_syms): New macros.
	(elf_swap_phdr_out, elf_build_phdrs, elf_write_phdrs): New
	functions.
	(elf_write_object_contents): Write program headers if appropriate.
	(bfd_section_from_shdr): Unnamed sections get empty string for
	name, not "unnamed".  Handle SHT_NOBITS separately from
	SHT_PROGBITS, and set some different flags.
	(elf_file_p): New routine.
	(elf_object_p, elf_core_file_p): Call it.
	(elf_object_p): Handle EM_HPPA.
	(elf_symbol_from, elf_idx_of_sym): New functions.
	(elf_make_sections): Get symbol number right for relocations.  Set
	SHF_ALLOC, SHF_WRITE, SHF_EXECINSTR when appropriate.
	(elf_fake_sections): BSS section should be SHT_NOBITS, not
	SHT_PROGBITS.  Always generate symtab and strtab, not only if
	relocations are needed.  Set SHF_* flags as appropriate.
	(elf_compute_section_file_positions): Handle bfd_arch_hppa.
	(elf_write_object_contents): Fix off-by-one error in symbol count.
	Store a correct value for the symbol; write the size field