@@ -20,8 +20,31 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.  */
 
+#ifndef _LIBHPPA_H
+#define _LIBHPPA_H
+
+#include "sysdep.h"
+
+#ifdef HOST_HPPAHPUX
+
 #include <sys/core.h>
 #include <sys/utsname.h>
+
+#endif /* HOST_HPPAHPUX */
+
+#ifdef HOST_HPPABSD
+
+/* Defining MAXCOMLEN avoids bringing in several (7 or 8) otherwise
+   useless include files which tend to clutter up the namespace.  
+
+   BSD uses a completely different scheme for object file identification.
+   so for now, define _PA_RISC_ID to accept any random value for a model
+   number.  */
+#include <a.out.h>
+#define MAXCOMLEN 16
+#define _PA_RISC_ID(__m_num) 1
+
+#endif /* HOST_HPPABSD */
 
 #define BYTES_IN_WORD 4
 
@@ -157,3 +180,5 @@ enum hppa_reloc_expr_type_alt
 	e_plabel = R_HPPA_E_PLABEL,
 	e_abs	= R_HPPA_E_ABS
 };
+
+#endif /* _LIBHPPA_H */
